--- a/playbook.yml
+++ b/playbook.yml
@@ -2,6 +2,15 @@
   hosts: localhost
   connection: local
   tasks:
+  - name: Check for Python
+      raw: test -e /usr/bin/python
+      changed_when: false
+      failed_when: false
+      register: check_python
+
+  - name: Install Python
+      raw: yum -y install python
+      when: check_python.rc != 0
   - name: Create resource group
     azure_rm_resourcegroup:
       name: myResourceGroup1
