--- a/create.yml
+++ b/create.yml
@@ -1,7 +1,5 @@
-- name: Stop Azure VM
+- name: Create Azure VM
   hosts: localhost
-  vars:
-    ansible_python_interpreter: /usr/bin/python3
   connection: local
   tasks:
   - name: Create resource group
@@ -10,18 +8,18 @@
       location: eastus
   - name: Create virtual network
     azure_rm_virtualnetwork:
-      resource_group: myResourceGroup
+      resource_group: "{{rg_name}}"
       name: myVnet
       address_prefixes: "10.0.0.0/16"
   - name: Add subnet
     azure_rm_subnet:
-      resource_group: myResourceGroup
+      resource_group: "{{rg_name}}"
       name: mySubnet
       address_prefix: "10.0.1.0/24"
       virtual_network: myVnet
   - name: Create public IP address
     azure_rm_publicipaddress:
-      resource_group: myResourceGroup
+      resource_group: "{{rg_name}}"
       allocation_method: Static
       name: myPublicIP
     register: output_ip_address
@@ -30,7 +28,7 @@
       msg: "The public IP is {{ output_ip_address.state.ip_address }}."
   - name: Create Network Security Group that allows SSH
     azure_rm_securitygroup:
-      resource_group: myResourceGroup
+      resource_group: "{{rg_name}}"
       name: myNetworkSecurityGroup
       rules:
         - name: SSH
@@ -41,7 +39,7 @@
           direction: Inbound
   - name: Create virtual network interface card
     azure_rm_networkinterface:
-      resource_group: myResourceGroup
+      resource_group: "{{rg_name}}"
       name: myNIC
       virtual_network: myVnet
       subnet: mySubnet
@@ -49,8 +47,8 @@
       security_group: myNetworkSecurityGroup
   - name: Create VM
     azure_rm_virtualmachine:
-      resource_group: myResourceGroup
-      name: myVM
+      resource_group: "{{rg_name}}"
+      name: "{{vm_name}}"
       vm_size: Standard_DS1_v2
       admin_username: azureuser
       ssh_password_enabled: false
