--- a/create.yml
+++ b/create.yml
@@ -1,5 +1,7 @@
-- name: Create Azure VM
+- name: Create a VM
   hosts: localhost
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
   connection: local
   tasks:
   - name: Create resource group
