--- a/create.yml
+++ b/create.yml
@@ -1,4 +1,5 @@
-- name: Create a VM
+
+- name: Create Azure VM
   hosts: localhost
   vars:
     ansible_python_interpreter: /usr/bin/python3
@@ -6,7 +7,7 @@
   tasks:
   - name: Create resource group
     azure_rm_resourcegroup:
-      name: myResourceGroup
+      name: "{{rg_name}}"
       location: eastus
   - name: Create virtual network
     azure_rm_virtualnetwork:
@@ -53,13 +54,11 @@
       name: "{{vm_name}}"
       vm_size: Standard_DS1_v2
       admin_username: azureuser
-      ssh_password_enabled: false
-      ssh_public_keys:
-        - path: /home/azureuser/.ssh/authorized_keys
-          key_data: <your-key-data>
+      admin_password: Manageiq@123
       network_interfaces: myNIC
       image:
         offer: CentOS
         publisher: OpenLogic
         sku: '7.5'
+        version: latest
         version: latest
