--- a/tags.yml
+++ b/tags.yml
@@ -10,5 +10,5 @@
       name: testing
       append_tags: True
       tags: 
-        'derp': 'snort'
-        'derp1': 'snort1'
+        'test1': 'test1'
+        'test2': 'test2'
